[package]
name = "google_youtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader_config = { path = "../downloader_config" }
exponential_backoff = { path = "../exponential_backoff" }

google-youtube3 = "4.0.1"

reqwest = { version = "0.11.13", features = ["default", "json"] }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive", "default"] }
serde_json = "1.0"

async-trait = "0.1.60"
strfmt = "0.2.2"


#[patch.crates-io.yup-oauth2]
#path = "../../Documents/GitHub/OMGeeky/yup-oauth2"
#version = "7.1.0"
