[package]
name = "google_youtube"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader_config = { git = "https://github.com/OMGeeky/downloader_config" }
exponential_backoff = { version="0.2", git = "https://github.com/OMGeeky/exponential_backoff" }

google-youtube3 = "5.0.2"

reqwest = { version = "0.11.13", features = ["default", "json"] }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive", "default"] }
serde_json = "1.0"

async-trait = "0.1.60"
strfmt = "0.2.2"

log = "0.4"
simplelog = "0.12.1"
#[patch.crates-io.yup-oauth2]
#path = "../../Documents/GitHub/OMGeeky/yup-oauth2"
#version = "7.1.0"

tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing","exponential_backoff/tracing", "downloader_config/tracing"]
